force-app/main/default/objects/EventMonitoring__c/EventMonitoring__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>EventMonitoring</label>
</CustomObject>