force-app/main/default/objects/EventMonitoring__c/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <label>Consumption</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>