force-app/main/default/objects/EventMonitoring__c/fields/Threshhold_Limit__c.field-meta.xml
<CustomField>
    <fullName>Threshhold_Limit__c</fullName>
    <label>Threshhold Limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>