force-app/main/default/objects/EventMonitoring__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>